<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gmail.lgelberger.myappportfolio.MainActivity">


    <TextView
        style="@style/General_View_style"
        android:text="@string/title_of_all_buttons"
        android:textSize="20sp" />

    <Button
        android:id="@+id/spotify_streamer_button"
        style="@style/Button_Style"
        android:text="@string/popular_movies" />

    <Button
        android:id="@+id/scores_app_button"
        style="@style/Button_Style"
        android:text="@string/stock_hawk" />

    <Button
        android:id="@+id/library_app_button"
        style="@style/Button_Style"
        android:text="@string/library_app" />

    <Button
        android:id="@+id/build_it_bigger_button"
        style="@style/Button_Style"
        android:text="@string/build_it_bigger" />

    <Button
        android:id="@+id/xyz_reader_button"
        style="@style/Button_Style"
        android:text="@string/xyz_reader" />

    <Button
        android:id="@+id/capstone_button"
        style="@style/Button_Style"
        android:background="#F44336"
        android:text="@string/capstone" />


</LinearLayout>